CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

INCLUDE_DIRECTORIES(
    SYSTEM ${ASIO_INCLUDE_DIR}
    SYSTEM ${EXTERNAL_INCLUDE_DIR}
)

LINK_DIRECTORIES(${EXTERNAL_BINARY_DIR})

SET(PROJECT stress_test)
project(${PROJECT})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DASIO_STANDALONE")

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
ELSE()
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Wextra -Werror")
ENDIF()

INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src/core/include
)

SET( SOURCES_MAIN
  main.cpp )

find_package( Threads REQUIRED )
add_executable(${PROJECT} ${SOURCES_MAIN})

SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES LINK_FLAGS "${${CMAKE_CXX_COMPILER_ID}_LINK_FLAGS}")

target_link_libraries(${PROJECT} 
  ${CMAKE_THREAD_LIBS_INIT}
  Core 
)

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
  TARGET_LINK_LIBRARIES(${PROJECT} wsock32.lib)
ELSE()
ENDIF()

